添加提取时间的功能

--- a/time_page.html
+++ b/time_page.html
@@ -16,15 +16,17 @@ div {
     text-align: center;
     margin: 10px;
 }
-#time_area input {
+#zy_time_area input {
     width: 280px;
 }
 </style>
 </head>
 <body>
-<div id="time_area">
+<div id="zy_time_area">
     <div>
         <button id="zy_current_time_btn">当前时间</button>
+        &nbsp;
+        <button id="zy_selection_time_btn">选中的时间</button>
     </div>
     <div>
         <input id="zy_ts_input" type="text" placeholder="请输入长整型时间戳" />
