--- a/time_page.html
+++ b/time_page.html
@@ -24,7 +24,7 @@ div {
 <body>
 <div id="zy_time_area">
     <div>
-        <button id="zy_current_time_btn">当前时间</button>
+        <button id="zy_current_time_btn">当前的时间</button>
         &nbsp;
         <button id="zy_selection_time_btn">选中的时间</button>
     </div>
@@ -32,7 +32,7 @@ div {
         <input id="zy_ts_input" type="text" placeholder="请输入长整型时间戳" />
     </div>
     <div>
-        <button id="zy_ts_to_dt_btn">&nbsp;↓&nbsp;转日期时间&nbsp;↓&nbsp;</button>
+        <button id="zy_ts_to_dt_btn">&nbsp;↓&nbsp;转日期&nbsp;↓&nbsp;</button>
         &nbsp;
         <button id="zy_dt_to_ts_btn">&nbsp;↑&nbsp;转时间戳&nbsp;↑&nbsp;</button>
     </div>
