--- a/time_page.html
+++ b/time_page.html
@@ -16,6 +16,9 @@ div {
     text-align: center;
     margin: 10px;
 }
+#zy_time_area {
+    margin-bottom: 15px;
+}
 #zy_time_area input {
     width: 280px;
 }
